Feat: optimizacion fase 11 implementada